plugins {
    id'application'
    id'com.github.johnrengelman.shadow' version '6.1.0'
}

def jdaVersion = '4.4.0_351'

group 'stinggy.hbot'
version '1.0-SNAPSHOT'
mainClassName = 'bot.BotMain'

sourceCompatibility = targetCompatibility = 15

repositories {
    mavenCentral()
    maven {
        name 'm2-dv8tion'
        url 'https://m2.dv8tion.net/releases'
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
    implementation "net.dv8tion:JDA:$jdaVersion"
    implementation 'org.apache.logging.log4j:log4j-core:2.17.0'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.15.0'
    implementation 'org.jsoup:jsoup:1.14.3'
    implementation 'org.apache.commons:commons-text:1.9'
    implementation 'org.json:json:20211205'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    implementation 'org.apache.httpcomponents:httpcore:4.4.14'
    implementation 'org.xerial:sqlite-jdbc:3.36.0.2'
    implementation 'org.apache.commons:commons-dbcp2:2.8.0'
    implementation 'com.google.guava:guava:31.0.1-jre'

}

test {
    useJUnitPlatform()
}

artifacts {
    shadowJar
}

jar {
    manifest {
        attributes 'Class-Path': '.'
        attributes 'Multi-Release': 'true'
    }
}

shadowJar {
    configurations = [project.configurations.runtimeClasspath]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

compileJava.options.encoding = 'UTF-8'